# WraithMedia

./: CMakeLists.txt  README  main.cpp
cmake/: Wraith.cmake
cmake/CompileTest/: CMakeLists.txt
src/: CMakeLists.txt
src/wraith/core/: Bootstrapper.cpp  Bootstrapper.hpp  CMakeLists.txt  IClassFactory.cpp  IClassFactory.hpp  IService.cpp  IService.hpp  ServiceManager.cpp  ServiceManager.hpp
src/wraith/core/collection/: CMakeLists.txt  ICollection.cpp  ICollection.hpp  ICollectionService.cpp  ICollectionService.hpp
src/wraith/core/collection/data/: AudioMedia.cpp  AudioMedia.hpp  MediaElement.cpp  MediaElement.hpp  StreamableMedia.cpp  StreamableMedia.hpp
src/wraith/core/media/: ITrack.cpp  ITrack.hpp
src/wraith/core/playback/: GStreamerPlaybackEngine.cpp  GStreamerPlaybackEngine.hpp  IEqualizer.cpp  IEqualizer.hpp  IPlaybackEngineService.cpp  IPlaybackEngineService.hpp  IPlaybackEventsCallback.cpp  IPlaybackEventsCallback.hpp  IVisualizationDataCallback.cpp  IVisualizationDataCallback.hpp  IVisualizationSource.cpp  IVisualizationSource.hpp  PlaybackEngine.cpp  PlaybackEngine.hpp  PlaybackEngineCapabilities.cpp  PlaybackEngineCapabilities.hpp  PlaybackEngineService.cpp  PlaybackEngineService.hpp  PlaybackState.hpp
src/wraith/core/visualization/: Drawable.cpp  Drawable.hpp  IPlaybackInfo.hpp  IRenderer.cpp  IRenderer.hpp  IRenderingController.cpp  IRenderingController.hpp  IVisualizationService.cpp  IVisualizationService.hpp  IVisualizationServiceCallback.cpp  IVisualizationServiceCallback.hpp  LinearRenderer.cpp  LinearRenderer.hpp  VisualizationData.cpp  VisualizationData.hpp  VisualizationService.cpp  VisualizationService.hpp
src/wraith/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  SliderWidget.cpp  SliderWidget.hpp
src/wraith/gui/collection/ui/: WraithMediaBrowser.ui
src/wraith/gui/equalizer/: EqualizerBand.cpp  EqualizerBand.hpp  EqualizerBandLabel.cpp  EqualizerBandLabel.hpp  EqualizerWidget.cpp  EqualizerWidget.hpp
src/wraith/gui/extras/: wraith.qrc
src/wraith/gui/extras/styles/: slider.qss
src/wraith/gui/visualizer/: RenderingThread.cpp  RenderingThread.hpp  VisualizerWidget.cpp  VisualizerWidget.hpp  WraithPlaybackInfo.cpp  WraithPlaybackInfo.hpp
tests/: CMakeLists.txt
tests/collection/: CMakeLists.txt  MediaCollectionData.cpp
tests/core/: CMakeLists.txt  playbackengine_test.cpp  servicemanager_test.cpp
